fix visibility

--- a/fbw-a380x/src/systems/instruments/src/EWDv2/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/EWDv2/style.scss
@@ -19,6 +19,11 @@
   }
 
 
+  .HiddenElement {
+    display: none;
+  }
+
+
 .EWDWarningTextLeft {
     fill: white;
     font-size: 1.55em;
